--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Websockets POC</string>
     <string name="hello_world">Hello World</string>
     <string name="titulo">Informe seu nome</string>
     <string name="surpreenda_me">Surpreenda-me</string>
